Added a new project

--- a/index.html
+++ b/index.html
@@ -93,6 +93,13 @@
 								<div class="project-image simon-image"></div>
 							</a>
 						</div>
+
+						<div class="project-item">
+							<a href="https://tolu-calculator.surge.sh" target="_blank">
+								<h4>Calculator app</h4>
+								<div class="project-image calculator-image"></div>
+							</a>
+						</div>
 	
 						<div class="project-item last">
 							<a href="https://tolu-unsplash-app.surge.sh" target="_blank">
