Added a new project

--- a/index.html
+++ b/index.html
@@ -128,11 +128,18 @@
 								<div class="project-image fcc-image"></div>
 							</a>
 						</div>
-	
+
 						<div class="project-item">
 							<a href="https://tolu-simon-game.surge.sh" target="_blank">
 								<h4>Simon game</h4>
 								<div class="project-image simon-image"></div>
+							</a>
+						</div>
+
+						<div class="project-item">
+							<a href="http://tolu-react-hex-gen.surge.sh" target="_blank">
+								<h4>React Hex color generator</h4>
+								<div class="project-image hex-image"></div>
 							</a>
 						</div>
 
