Temporarily removed wakatime coding activity graph

--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@
 							</div>
 						</div>
 
-						<p class="coding-stats">
-							<a href="https://wakatime.com"><img src="https://wakatime.com/share/@Tolu/f16d467e-c936-4698-8989-7fd61e388ac5.png" /></a>
-						</p>
+						<!-- Wakatime coding stats -->
 
 						<p class="description skill-desc">I code mostly in JavaScript and spend a lot of my time learning new things to improve my coding skills. I also write technical articles on <a href="https://dev.to/" class="dev-link highlight" target="_blank">Dev.to</a>. You can check out my profile <a href="https://dev.to/toluagboola" class="dev-link highlight" target="_blank">here</a>.</p>
 
