--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
 							</div>
 						</div>
 
-						<!-- Wakatime coding stats -->
+						<p class="coding-stats">
+							<a href="https://wakatime.com"><img src="https://wakatime.com/share/@Tolu/eebc3f48-9a8b-4db0-adfe-ac155d4aca07.png" /></a>
+						</p>
 
 						<p class="description skill-desc">I code mostly in JavaScript and spend a lot of my time learning new things to improve my coding skills. I also write technical articles on <a href="https://dev.to/" class="dev-link highlight" target="_blank">Dev.to</a>. You can check out my profile <a href="https://dev.to/toluagboola" class="dev-link highlight" target="_blank">here</a>.</p>
 
@@ -126,7 +128,7 @@
 								<div class="project-image fcc-image"></div>
 							</a>
 						</div>
-
+						
 						<div class="project-item">
 							<a href="https://tolu-simon-game.surge.sh" target="_blank">
 								<h4>Simon game</h4>
