--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 					<div id="navbarMenu" class="navbar-menu is-active">
 						<div class="navbar-end">
-							<a href="#" class="navbar-item">RESUME/CV</a>
+							<a href="https://github.com/toluagboola/toluagboola.github.io/blob/master/tolu-agboola-cv.pdf" class="navbar-item">RESUME/CV</a>
 							<a href="#about" class="navbar-item">ABOUT</a>
 							<a href="#portfolio" class="navbar-item">PROJECTS</a>
 							<a href="#contact" class="navbar-item">CONTACT</a>
@@ -234,7 +234,7 @@
 				<div class="container">
 					<h2 class="title is-2 is-size-3-mobile has-text-centered">Get in touch</h2>
 				
-					<h4 class="has-text-centered pb-6 is-size-5 is-size-6-mobile">I'm currently open to job offers. View my CV <a href="#">here</a>.</h4>
+					<h4 class="has-text-centered pb-6 is-size-5 is-size-6-mobile">I'm currently open to job offers. View my CV <a href="https://github.com/toluagboola/toluagboola.github.io/blob/master/tolu-agboola-cv.pdf">here</a>.</h4>
 					<form action="https://formspree.io/f/mrgoybkk" method="POST">
 						<div class="columns is-centered mb-5">
 							<div class="column is-half">
