--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 								I'm a Front-End developer based in Nigeria, and I absolutely love how it feels to have a computer do exactly what I tell it to do! I have more than one year of hands-on experience using the technologies listed below. I value progress and I'm working to improve my skills every day. Lately, I've been learning React and NodeJS. 
 							</h2>
 
-							<h2 class="intro mb-5 is-size-6-mobile">I write technical articles, and you can find them on my <a href="https://dev.to/toluagboola">dev.to profile</a>. When I'm not coding, you will usually find me either trading (Forex), reading books, working out to good music, or watching anime.</h2>
+							<h2 class="intro mb-5 is-size-6-mobile">I write technical articles, and you can find them on my <a href="https://dev.to/toluagboola">dev.to profile</a>. When I'm not coding, you will usually find me either reading books, working out to good music, or watching anime.</h2>
 						</div>
 					</div>
 				</div>
