--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 						<h2 class="subtitle mb-1 is-size-3-desktop is-size-4-mobile">Unsplash Photo Search App</h2>
 						<h4 class="subtitle has-text-grey-light is-size-6-mobile mb-3">Built with HTML, CSS & JAVASCRIPT</h4>
 						<div class="content">
-							<p>A application that lets the user search for any category of photos from Unsplash.</p>
+							<p>An application that lets the user search for any category of photos from Unsplash.</p>
 							<div class="buttons my-4 has-text-centered-mobile">
 								<a class="button is-info" href="https://github.com/toluagboola/unsplash-search-app">View on GitHub</a>
 								<a class="button" href="https://tolu-unsplash-app.surge.sh/">Live site</a>
