--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								I'm focused on writing clean, elegant and efficient code.
 							</h2>
 							<img
-								class="hero-img"
+								class="hero-img mt-5"
 								src="https://res.cloudinary.com/dipyaby4f/image/upload/v1621604850/rsz_img_4428.jpg"
 								alt=""
 							/>
