Update styles and make logo a link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 			<!-- Navbar	-->
 			<nav class="navbar  py-3 px-5">
 					<div class="navbar-brand">
-						<h2 class="is-size-4">TOLUWANIMI AGBOOLA</h2>
+						<a href="https://toluagboola.github.io/" class="logo">
+							<h2 class="is-size-4">TOLUWANIMI AGBOOLA</h2>
+						</a>
 						<a
 							role="button"
 							class="navbar-burger is-active"
@@ -61,6 +63,7 @@
 								class="hero-img mt-5"
 								src="https://res.cloudinary.com/dipyaby4f/image/upload/v1621604850/rsz_img_4428.jpg"
 								alt=""
+								loading="lazy"
 							/>
 						</div>
 					</div>
