--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 						<div class="column is-three-fifths has-text-centered">
 							
 							<h2 class="intro mb-5 is-size-6-mobile">
-								I'm a Front-End developer based in Nigeria, and I absolutely love how it feels to have a computer do exactly what I tell it to do! I have more than one year of hands-on experience using the technologies listed below. I value progress and I'm working to improve my skills every day. Lately, I've been learning React and NodeJS. 
+								I'm a Front-End developer based in Nigeria, and I absolutely love how it feels to have a computer do exactly what I tell it to do! I have more than one year of hands-on experience using the technologies listed below. I value progress and I'm working to improve my skills every day. Lately, I've been learning React, TypeScript and NodeJS. 
 							</h2>
 
 							<h2 class="intro mb-5 is-size-6-mobile">I write technical articles, and you can find them on my <a href="https://dev.to/toluagboola">dev.to profile</a>. When I'm not coding, you will usually find me either reading books, working out to good music, or watching anime.</h2>
@@ -137,12 +137,53 @@
 
 			<section class="section projects" id="portfolio">
 				<h2 class="title has-text-centered is-2 is-size-3-mobile mt-5">Portfolio</h2>
+
+				<div class="container project">
+					<div class="project-desc">
+						<h2 class="subtitle mb-1 is-size-3-desktop is-size-4-mobile">Hacker Stories</h2>
+						<h4 class="subtitle has-text-grey-light is-size-6-mobile mb-3">Built with REACT & TYPESCRIPT</h4>
+						<div class="content">
+							<p>An application that allows the user to search for articles on Hacker news under any topic.<p>
+								<div class="buttons my-4">
+									<a class="button is-info" href="https://github.com/toluagboola/hacker-stories">View on GitHub</a>
+									<a class="button" href="http://hacker-stories.surge.sh/">Live site</a>
+								</div>
+						</div>
+					</div>
+					<img
+						loading="lazy"
+						src="https://res.cloudinary.com/dipyaby4f/image/upload/v1622815938/hacker-stories.png"
+						class="project-img"
+					/>
+				</div>
+
+				<div class="container project">
+					<div class="project-desc">
+						<h2 class="subtitle mb-1 is-size-3-desktop is-size-4-mobile">Stellar Photos Website</h2>
+						<h4 class="subtitle has-text-grey-light is-size-6-mobile mb-3">Built with HTML & SCSS</h4>
+						<div class="content">
+							<p>Fully responsive landing page for Stellar Photos, a browser extension that loads a
+								beautiful image every new tab.</p>
+								<div class="buttons my-4">
+									<a class="button is-info" href="https://github.com/ayoisaiah/stellar-website">View on GitHub</a>
+									<a class="button" href="https://stellar.freshman.tech/">Live site</a>
+								</div>
+						</div>
+					</div>
+					<img
+						loading="lazy"
+						src="https://res.cloudinary.com/dipyaby4f/image/upload/v1622453566/stellar-page.png"
+						class="project-img"
+					/>
+				</div>
+
+
 				<div class="container project">
 					<div class="project-desc">
 						<h2 class="subtitle mb-1 is-size-3-desktop is-size-4-mobile">Unsplash Photo Search App</h2>
 						<h4 class="subtitle has-text-grey-light is-size-6-mobile mb-3">Built with HTML, CSS & JAVASCRIPT</h4>
 						<div class="content">
-							<p>An application that lets the user search for any category of photos from Unsplash.</p>
+							<p>An application that lets the user to search for any category of photos from Unsplash.</p>
 							<div class="buttons my-4 has-text-centered-mobile">
 								<a class="button is-info" href="https://github.com/toluagboola/unsplash-search-app">View on GitHub</a>
 								<a class="button" href="https://tolu-unsplash-app.surge.sh/">Live site</a>
@@ -171,26 +212,6 @@
 					<img
 						loading="lazy"
 						src="https://res.cloudinary.com/dipyaby4f/image/upload/v1622551764/game-of-life.png"
-						class="project-img"
-					/>
-				</div>
-
-				<div class="container project">
-					<div class="project-desc">
-						<h2 class="subtitle mb-1 is-size-3-desktop is-size-4-mobile">Stellar Photos Website</h2>
-						<h4 class="subtitle has-text-grey-light is-size-6-mobile mb-3">Built with HTML & SCSS</h4>
-						<div class="content">
-							<p>Fully responsive landing page for Stellar Photos, a browser extension that loads a
-								beautiful image every new tab.</p>
-								<div class="buttons my-4">
-									<a class="button is-info" href="https://github.com/ayoisaiah/stellar-website">View on GitHub</a>
-									<a class="button" href="https://stellar.freshman.tech/">Live site</a>
-								</div>
-						</div>
-					</div>
-					<img
-						loading="lazy"
-						src="https://res.cloudinary.com/dipyaby4f/image/upload/v1622453566/stellar-page.png"
 						class="project-img"
 					/>
 				</div>
