--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 						<h2 class="subtitle mb-1 is-size-3-desktop is-size-4-mobile">Hacker Stories</h2>
 						<h4 class="subtitle has-text-grey-light is-size-6-mobile mb-3">Built with REACT & TYPESCRIPT</h4>
 						<div class="content">
-							<p>An application that allows the user to search for articles on Hacker news under any topic.<p>
+							<p>An application that allows the user to search for popular stories on Hacker news.<p>
 								<div class="buttons my-4">
 									<a class="button is-info" href="https://github.com/toluagboola/hacker-stories">View on GitHub</a>
 									<a class="button" href="http://hacker-stories.surge.sh/">Live site</a>
