Update image styles

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 						</div>
 					</div>
 					<img
-						loading="lazy"
+						loading="lazy" width="576" height="285"
 						src="https://res.cloudinary.com/dipyaby4f/image/upload/v1622453566/stellar-page.png"
 						class="project-img"
 					/>
@@ -172,7 +172,7 @@
 						</div>
 					</div>
 					<img
-						loading="lazy"
+						loading="lazy" width="576" height="285"
 						src="https://res.cloudinary.com/dipyaby4f/image/upload/v1622453469/unsplash-app.png"
 						class="project-img"
 					/>
@@ -191,7 +191,7 @@
 						</div>
 					</div>
 					<img
-						loading="lazy"
+						loading="lazy" width="576" height="285"
 						src="https://res.cloudinary.com/dipyaby4f/image/upload/v1622551764/game-of-life.png"
 						class="project-img"
 					/>
@@ -210,7 +210,7 @@
 						</div>
 					</div>
 					<img
-						loading="lazy"
+						loading="lazy" width="576" height="285"
 						src="https://res.cloudinary.com/dipyaby4f/image/upload/v1622453634/simon-game.png"
 						class="project-img"
 					/>
@@ -228,7 +228,7 @@
 						</div>
 					</div>
 					<img
-						loading="lazy"
+						loading="lazy" width="576" height="285"
 						src="https://res.cloudinary.com/dipyaby4f/image/upload/v1622453602/todo-app.png"
 						class="project-img"
 					/>
