Update Game of Life Screenshot and position

--- a/index.html
+++ b/index.html
@@ -190,6 +190,40 @@
 				<div class="container project">
 					<div class="project-desc">
 						<h2 class="subtitle mb-1 is-size-3-desktop is-size-4-mobile">
+							Game of Life
+						</h2>
+						<h4 class="subtitle has-text-grey-light is-size-6-mobile mb-3">
+							Built with REACT & TYPESCRIPT
+						</h4>
+						<div class="content">
+							<p>
+								A cellular automaton, zero-player game devised by John Conway.
+							</p>
+							<p></p>
+							<div class="buttons my-4">
+								<a
+									class="button is-info"
+									href="https://github.com/toluagboola/react-game-of-life"
+									>View on GitHub</a
+								>
+								<a class="button" href="http://tolu-game-of-life.surge.sh/"
+									>Live site</a
+								>
+							</div>
+						</div>
+					</div>
+					<img
+						loading="lazy"
+						width="576"
+						height="285"
+						src="https://res.cloudinary.com/dipyaby4f/image/upload/v1624026401/game.png"
+						class="project-img"
+					/>
+				</div>
+
+				<div class="container project">
+					<div class="project-desc">
+						<h2 class="subtitle mb-1 is-size-3-desktop is-size-4-mobile">
 							Unsplash Photo Search App
 						</h2>
 						<h4 class="subtitle has-text-grey-light is-size-6-mobile mb-3">
@@ -217,40 +251,6 @@
 						width="576"
 						height="285"
 						src="https://res.cloudinary.com/dipyaby4f/image/upload/v1622453469/unsplash-app.png"
-						class="project-img"
-					/>
-				</div>
-
-				<div class="container project">
-					<div class="project-desc">
-						<h2 class="subtitle mb-1 is-size-3-desktop is-size-4-mobile">
-							Game of Life
-						</h2>
-						<h4 class="subtitle has-text-grey-light is-size-6-mobile mb-3">
-							Built with REACT
-						</h4>
-						<div class="content">
-							<p>
-								A cellular automaton, zero-player game devised by John Conway.
-							</p>
-							<p></p>
-							<div class="buttons my-4">
-								<a
-									class="button is-info"
-									href="https://github.com/toluagboola/react-game-of-life"
-									>View on GitHub</a
-								>
-								<a class="button" href="http://tolu-game-of-life.surge.sh/"
-									>Live site</a
-								>
-							</div>
-						</div>
-					</div>
-					<img
-						loading="lazy"
-						width="576"
-						height="285"
-						src="https://res.cloudinary.com/dipyaby4f/image/upload/v1622551764/game-of-life.png"
 						class="project-img"
 					/>
 				</div>
