Change name and years of experience

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav class="navbar py-3 px-5">
         <div class="navbar-brand">
           <a href="https://toluagboola.github.io/" class="logo">
-            <h2 class="is-size-4 nav-logo">TOLUWANIMI AGBOOLA</h2>
+            <h2 class="is-size-4 nav-logo">TOLUWANIMI ISAIAH</h2>
           </a>
           <a
             role="button"
@@ -58,7 +58,7 @@
               <h1
                 class="title is-size-1-desktop is-size-2-tablet is-size-3-mobile mt-3"
               >
-                Hello, my name is Toluwanimi Agboola.
+                Hello, my name is Toluwanimi Isaiah.
               </h1>
               <h2 class="intro mb-5">
                 I'm focused on writing clean, elegant and efficient code.
@@ -82,7 +82,7 @@
               <h2 class="intro mb-5 is-size-6-mobile">
                 I'm a Front-End developer based in Nigeria, and I absolutely
                 love how it feels to have a computer do exactly what I tell it
-                to do! I have more than one year of hands-on experience using
+                to do! I have more than two years of hands-on experience using
                 the technologies listed below. I value progress and I'm working
                 to improve my skills every day. Lately, I've been learning
                 React, TypeScript and NodeJS.
@@ -91,8 +91,8 @@
               <h2 class="intro mb-5 is-size-6-mobile">
                 I write technical articles, and you can find them on my
                 <a href="https://dev.to/toluagboola">dev.to profile</a>. When
-                I'm not coding, you will usually find me either reading books,
-                working out to good music, or watching anime.
+                I'm not coding, you will usually find me reading books, working
+                out to good music, or watching anime.
               </h2>
             </div>
           </div>
