Add new project - Feedbackify

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Tolu Agboola</title>
+    <title>Tolu Isaiah</title>
     <link
       rel="icon"
       href="https://res.cloudinary.com/dipyaby4f/image/upload/v1621772221/portfolio-logo.png"
@@ -83,9 +83,9 @@
                 I'm a Front-End developer based in Nigeria, and I absolutely
                 love how it feels to have a computer do exactly what I tell it
                 to do! I have more than two years of hands-on experience using
-                the technologies listed below. I value progress and I'm working
-                to improve my skills every day. Lately, I've been learning
-                React, TypeScript and NodeJS.
+                the technologies listed below and more. I value progress and I'm
+                working to improve my skills every day. Lately, I've been
+                learning React, TypeScript and NodeJS.
               </h2>
 
               <h2 class="intro mb-5 is-size-6-mobile">
@@ -192,6 +192,42 @@
             width="576"
             height="285"
             src="https://res.cloudinary.com/dipyaby4f/image/upload/v1667651117/sella.png"
+            class="project-img"
+          />
+        </div>
+
+        <div class="container project">
+          <div class="project-desc">
+            <h2 class="subtitle mb-1 is-size-3-desktop is-size-4-mobile">
+              Feedbackify
+            </h2>
+            <h4 class="subtitle has-text-grey-light is-size-6-mobile mb-3">
+              Built with Svelte & TailwindCSS
+            </h4>
+            <div class="content">
+              <p>
+                A simple application that allows users to rate a product as well
+                as submit their feedback comments. It displays the total number
+                of responses, and the average of the ratings. The submitted
+                reviews can also be deleted.
+              </p>
+              <div class="buttons my-4">
+                <a
+                  class="button is-info"
+                  href="https://github.com/toluagboola/feedbackify"
+                  >View on GitHub</a
+                >
+                <a class="button" href="https://feedbackify.netlify.app/"
+                  >Live site</a
+                >
+              </div>
+            </div>
+          </div>
+          <img
+            loading="lazy"
+            width="576"
+            height="285"
+            src="https://res.cloudinary.com/dipyaby4f/image/upload/v1676472052/Screenshot_from_2023-02-15_15-33-13.png"
             class="project-img"
           />
         </div>
@@ -440,7 +476,7 @@
 
     <footer class="footer p-5">
       <div class="container footer-content">
-        <p class="is-uppercase">Toluwanimi Agboola</p>
+        <p class="is-uppercase">Toluwanimi Isaiah</p>
         <div class="footer-links">
           <a href="https://github.com/toluagboola" class="footer-link">
             <span class="icon is-medium">
