Update twitter profile link

--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
               <i data-feather="linkedin"></i>
             </span>
           </a>
-          <a href="https://twitter.com/toluwaniagboola" class="footer-link">
+          <a href="https://twitter.com/thetoluisaiah" class="footer-link">
             <span class="icon is-medium">
               <i data-feather="twitter"></i>
             </span>
